deploy/deployment-sampleapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sampleapp
  labels:
    app: sampleapp
    component: sampleapp
    release: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sampleapp
      component: sampleapp
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: sampleapp
        component: sampleapp
        release: v1
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchLabels:
                  app: sampleapp
                  component: sampleapp
                  release: v1
              topologyKey: kubernetes.io/hostname
            weight: 100
      volumes:
      - name: ca-bundles
        configMap:
          name: ca-bundles
      containers:
      - name: http
        image: nginx:alpine
        imagePullPolicy: IfNotPresent
        command: []
        volumeMounts:
        - mountPath: "/etc/ssl/certs"
          name: ca-bundles
          readOnly: true
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
