deploy/service-api.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    component: api
    app: sampleapp
    release: v1
  name: api
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 80
  - name: metrics
    port: 9080
    protocol: TCP
  selector:
    app: sampleapp
    component: api
  type: ClusterIP
