deploy/service-sampleapp.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    component: sampleapp
    app: sampleapp
    release: v1
  name: sampleapp
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
  - name: metrics
    port: 9080
    protocol: TCP
  selector:
    app: sampleapp
    component: sampleapp
  type: ClusterIP
