deploy/service-sidecar.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    component: sidecar
    app: sampleapp
    release: v1
  name: sidecar
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 80
  selector:
    app: sampleapp
    component: sidecar
  type: ClusterIP
