deploy/ingress-example.com.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
  labels:
    component: api
    app: sampleapp
    release: v1
  name: api
spec:
  rules:
  - host: example.com
    http:
      paths:
      - backend:
          serviceName: api
          servicePort: http
        path: /
